# vle-api

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  example.env  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
app/: backend_pre_start.py  initial_data.py  main.py
app/api/: deps.py
app/core/: settings.py
app/crud/: __init__.py  base.py  crud_complex.py  crud_discipline.py  crud_file.py  crud_role.py  crud_specialty.py  crud_theme.py  crud_user.py  exceptions.py
app/db/: base.py  init_db.py  session.py
app/libs/: __init__.py  jwt_tokens.py  role_scope.py  system_file.py
app/models/: __init__.py  complex.py  complex_discipline.py  discipline.py  discipline_specialty.py  file.py  file_theme.py  role.py  specialty.py  specialty_file.py  theme.py  theme_complex.py  user.py
app/schemas/: __init__.py  auth.py  base.py  complex.py  discipline.py  file.py  role.py  specialty.py  theme.py  token.py  user.py
app/utils/: __init__.py  password.py
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
migrations/: env.py
migrations/versions/: 213171b1f82f_create_complex_discipline_table.py  2aa11d360469_create_file_table.py  36be9efaac47_create_specialty_table.py  3cb9ee492022_change_ondelete_fk_event_for_discipline.py  3d8f84d47c73_create_file_theme_table.py  51585717d351_create_discipline_specialty_table.py  5a08300b8f7c_add_role_name_attr.py  5a98fe4d7ec5_create_complex_table.py  6217e889bebc_create_role_table.py  6e0c011647df_create_theme_complex_table.py  769baa5cd551_create_discipline_table.py  (+8 more)
(+31 files in other folders)
