[tool.poetry]
name = "vle-api"
version = "0.1.0"
description = "Virtual Learning Environment API"
authors = ["champmoon <antipov8v@gmail.com>"]
readme = "README.md"
packages = [{ include = "vle_api" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.41"}
alembic = "^1.8.1"
asyncpg = "^0.26.0"
uvicorn = { extras = ["standard"], version = "^0.18.3" }
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.10.2"}
tenacity = "^8.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
autopep8 = "^1.7.0"
mypy = "^0.971"
black = "^22.8.0"
isort = "^5.10.1"
autoflake = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.1.0a6"]
build-backend = "poetry.core.masonry.api"
